kubernetes-Task 3/app-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rest-app-api
spec:
  selector:
    matchLabels:
      app: rest-app-api
  replicas: 1
  template:
    metadata:
      labels:
        app: rest-app-api
    spec:
      containers:
        - name: rest-app-api
          image: monikahande/rest-app-api
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
