kubernetes-Task 3/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rest-app-client
spec:
  selector:
    matchLabels:
      app: rest-app-client
  replicas: 1
  template:
    metadata:
      labels:
        app: rest-app-client
    spec:
      containers:
        - name: rest-app-client
          image: monikahande/rest-app-client:latest
          ports:
            - containerPort: 80
