kubernetes-Task 3/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest-app-client-service
spec:
  selector:
    app: rest-app-client
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
  type: LoadBalancer
