kubernetes-Task 3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rest-app-ingress
  labels:
    name: rest-app-ingress
spec:
  rules:
  - host: localhost
    http:
      paths:
      - pathType: Prefix
        path: /?(.*)
        backend:
          service:
            name: rest-app-client-service
            port: 
              number: 80
      - pathType: Prefix
        path: /?(.*)
        backend:
          service:
            name: rest-app-api
            port: 
              number: 8080
